# amazon-bedrock-agents-healthcare-lifesciences

agents_catalog/23-data-harmonisation-drug-dev-pipeline/: pipeline-data-agent-cfn.yaml
agents_catalog/24-Research-agent/lambda/: agent_handler.py  read_pubmed.py
agents_catalog/25-Pubmed-Supervisor-Agent/: .dockerignore  .gitignore  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.arm64  README.md  app.py  cdk.json  check-files.sh  debug-docker.sh  docker-compose.arm64.yml  docker-compose.yml  docker-deploy.sh  env.example  pubmed-researcher-agent.yaml  pubmed-supervisor-agent.yaml  pyproject.toml  requirements-deployment.txt  requirements.txt  validate-schemas.py
agents_catalog/25-Pubmed-Supervisor-Agent/action_groups/pubmed_researcher/: read_pubmed_schema.json  search_pubmed_schema.json
agents_catalog/25-Pubmed-Supervisor-Agent/action_groups/pubmed_researcher/lambda/: read_pubmed_bedrock.py  search_pubmed_bedrock.py
agents_catalog/25-Pubmed-Supervisor-Agent/lambda/: read_pubmed_simple.py  simple_supervisor_handler.py
agents_catalog/25-Pubmed-Supervisor-Agent/simplified_agent/: README.md  output.md  pyproject.toml
agents_catalog/25-Pubmed-Supervisor-Agent/simplified_agent/lambda/: read_pubmed.py  search_pubmed.py  search_pubmed_simple.py  simple_supervisor_handler.py  supervisor_agent_handler.py
agents_catalog/25-Pubmed-Supervisor-Agent/simplified_agent/research-results/: 202508131042-sapablursen-longer.md  202508131042-sapablursen.md
agents_catalog/25-Pubmed-Supervisor-Agent/supervisor_agent/: supervisor_agent_stack.py
(+6 files in other folders)
